# rieul.app

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bdl.yaml  deno.json
.github/workflows/: check-db-schema.yml  release-installers.yml
daemon/core/: Cargo.toml  build.rs
daemon/core/src/: cbor.rs  config.rs  generated.rs  ipc.rs  lib.rs  pairing.rs  rpc.rs  socket_wire.rs  traits.rs  wire.rs
daemon/db-schema/: README.md  current.sql
daemon/db-schema/migrations/: 0001-initial.sql  0002-agent-state.sql
daemon/host/: Cargo.toml
daemon/host/src/: agent.rs  agent_runtime.rs  cert.rs  command.rs  db_schema.rs  lib.rs  server.rs  shell_integration.rs  state_db.rs  terminal.rs
daemon/host/tests/fixtures/: codex-acp-text-turn.jsonl
daemon/macos/: Cargo.toml  build.rs
daemon/macos/src/: fs.rs  installer.rs  installer_ui.rs  ipc.rs  lib.rs  pairing_ui.rs  process_lsof.rs  process_modules.rs  process_resources.rs  process_sockets.rs  tray.rs
daemon/windows/: Cargo.toml  build.rs  windows-daemon.manifest
daemon/windows-close-guard/: Cargo.toml
daemon/windows-close-guard/src/: lib.rs
daemon/windows/src/: fs.rs  ipc.rs  lib.rs  pairing_ui.rs  process_modules.rs  process_resources.rs  process_sockets.rs  server.rs  service.rs  terminal_ipc.rs  tray.rs  user_process.rs  window_agent.rs  windows.rs
protocol/: README.md
protocol/designs/: windows-user-terminal-ipc.md
protocol/schemas/config/: client_credentials.bdl  pairing_state.bdl  system_config.bdl
protocol/schemas/ipc/: agent.bdl  common.bdl  gui.bdl  user.bdl
protocol/schemas/rpc/: agent.bdl  capability.bdl  command.bdl  daemon.bdl  filesystem.bdl  pairing.bdl  process.bdl  terminal.bdl  window.bdl
protocol/schemas/socket-wire/: reqres.bdl
protocol/schemas/wire/: datagram.bdl  reqres.bdl
protocol/standards/: rieul-cbor.md  rieul-ipc.md  rieul-ipc.yaml  rieul-rpc.yaml  rieul-socket-wire.md  rieul-wire.yaml  wgo-cbor.md  wgo-rpc.yaml  wgo-wire.yaml
scripts/: scaffold-dev-config.ts
scripts/codegen/rust/: main.ts
scripts/codegen/typescript/: main.ts
scripts/macos/: dev-daemons.sh  dev-desktop.sh  kill-daemons.sh  package-daemon-dmg.sh  package-desktop-dmg.sh  package-desktop-pkg.sh  pair-dev.sh
scripts/macos/pkg-scripts/: postinstall
scripts/windows/: dev-daemons.ps1  dev-desktop.ps1  kill-daemons.ps1  kill-desktop.ps1  package-daemon-msi.ps1  package-daemon.ps1  package-desktop-msi.ps1  package-desktop-msix.ps1  pair-dev.ps1  trust-daemon-dev-certificate.ps1  trust-desktop-dev-certificate.ps1
web/: daemon-main.html  deno.json  index.html  tsconfig.json  uno.config.ts  vite.config.ts
web/desktop/: generate-tray-icon.ts  main.ts  windows-tray.ts  windows-window-icon.ts
web/public/: install.ps1  install.sh
web/src/: daemon-main.tsx  desktop-bindings.d.ts  desktop-context.ts  main.tsx  styles.css  uno-env.d.ts
web/src/protocol/: cbor.ts  client.ts  generated.ts  rpc.ts  socket-ipc.ts  wire.ts
web/src/state/: capability.ts  connection.ts  daemon-info.ts  explorer.ts  file-viewer.ts  jotai-store.ts  machine-id.tsx  machine-menu.ts  machine-modal.ts  machine-store.ts  machines.ts  rpc-session.ts  terminal-shells.ts  types.ts  workbench-context.ts  workbench.ts
web/src/tools/: check-daemon.ts
web/src/view/: class-name.ts  index.tsx  state.tsx
web/src/view/daemon-main/: index.tsx
web/src/view/machine-panel/: add-machine-form.tsx  index.tsx  (+5 more)
web/tests/: desktop-context.test.ts
(+70 files in other folders)
