[package]
name = "wgo-daemon-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
http = "1"
notify = "8"
rustls = "0.23"
rustls-pemfile = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
wgo-daemon-core = { path = "../core" }
web-transport-quinn = { version = "0.11", default-features = true }

[dev-dependencies]
rcgen = "0.14"
tempfile = "3"
