[package]
name = "wgo-macos-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "wgo_macos_daemon"
path = "src/lib.rs"

[[bin]]
name = "wgo-macos-system"
path = "src/bin/system.rs"

[[bin]]
name = "wgo-macos-user"
path = "src/bin/user.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trash = "5"
wgo-daemon-core = { path = "../core" }
wgo-daemon-host = { path = "../host" }

[dev-dependencies]
tempfile = "3"
